tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/instanceip/localhost_IP_with_wildcard_sidecar/_test_context/Sidecar.678254526.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-88348
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 0.0.0.0:18084
    port:
      number: 18084
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
